Refactor ArXiv ingestion workflow and database schema
- Updated ArXivManager to store papers, chunks, embeddings, and structures in new collections.
- Changed collection names in ArxivMetadataConfig and metadata_pipeline.yaml to reflect new schema.
- Modified workflow_arxiv_initial_ingest to handle new data structure and embedding configurations.
- Enhanced PDF workflows to support new embedding factory and deprecated old embedder types.
- Added logging for embedding initialization and processing.
- Updated setup scripts and documentation to align with new collection names and structures.
- Introduced a new Conveyance Framework for structured logging and performance evaluation.
- Improved database verification script to check for embeddings and chunk counts.

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -52,7 +52,7 @@ reviews:
     - "!**/*.pyo"
     - "!**/*.egg-info/**"
     - "!**/Acheron/**"         # Our deprecated code archive
-    - "!**/tests/**"             # Exclude test files from automated review
+    - "!**/tests/**"             # Exclude tests from review scope
 
   # Path-specific instructions - apply to all paths
   path_instructions:
