--- a/core/config/workflows/arxiv_metadata_default.yaml
+++ b/core/config/workflows/arxiv_metadata_default.yaml
@@ -20,9 +20,9 @@ arango_username: "root"
 # Password from ARANGO_PASSWORD environment variable
 
 # Collection Names (Default)
-metadata_collection: "arxiv_metadata"
-chunks_collection: "arxiv_abstract_chunks"
-embeddings_collection: "arxiv_abstract_embeddings"
+metadata_collection: "arxiv_papers"
+chunks_collection: "arxiv_chunks"
+embeddings_collection: "arxiv_embeddings"
 
 # Embedder Configuration (Default)
 embedder_model: "jinaai/jina-embeddings-v4"
@@ -37,8 +37,8 @@ gpu_device: "cuda:0"
 # Checkpoint Configuration (Default)
 checkpoint_interval: 10000
 resume_from_checkpoint: true
-checkpoint_file: "/tmp/arxiv_metadata_checkpoint.json"
-state_file: "/tmp/arxiv_metadata_state.json"
+checkpoint_file: "/tmp/arxiv_papers_checkpoint.json"
+state_file: "/tmp/arxiv_papers_state.json"
 
 # Performance Monitoring (Default)
 monitor_interval: 100
