--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ sentence-transformers = "^4.1.0"
 matplotlib = "^3.7.0"
 httpx = "^0.24.0"
 pyyaml = "^6.0"
+defusedxml = "^0.7.1"
 # mcp = { version = "^0.1.0", optional = true }  # Uncomment when MCP is available
 aiofiles = "^23.0.0"
 einops = "^0.8.1"
