Refactor ArangoDB collections and workflows for arXiv ingestion
- Updated collection names in the academic citation toolkit and workflows to reflect changes from `arxiv_chunks` to `arxiv_abstract_chunks` and from `arxiv_papers` to `arxiv_metadata`.
- Modified the workflow initialization to use the new collection names.
- Adjusted documentation and README files to align with the new collection structure.
- Enhanced the database setup scripts to create the updated collections.
- Implemented a new benchmark test for ArangoDB HTTP/2 client, including GET, INSERT, and QUERY operations.
- Added a CLI tool for logging benchmark results with context parameters.
- Created unit tests for the memory client configuration to ensure proper socket resolution and client instantiation.

--- a/.gitignore
+++ b/.gitignore
@@ -409,7 +409,8 @@ tools/arxiv/SCRIPT_REORGANIZATION_ANALYSIS.md
 tools/arxiv/utils/SCRIPT_ANALYSIS.md
 scratch/*
 dev-utils/*
-tests/
 core/database/arango/proxies/.gocache/
 *.gocache/*
-benchmarks/*
+core/database/arango/proxies/roproxy
+core/database/arango/proxies/rwproxy
+benchmarks/reports/*
