feat: Introduce PathRAG retrieval toolkit with AQL support
- Added core components for PathRAG including PathragConfig and PathragService.
- Implemented AQL builders for weighted path extraction in pathrag/aql.py.
- Created schema management helpers for graph services in graph/schema.py.
- Developed sharding toolkit for partitioned data processing, including adapters, jobs, and runners.
- Added command-line interface for running sharded jobs with configurable parameters.
- Implemented unit tests for sharding runner and partition adapters.

--- a/.gitignore
+++ b/.gitignore
@@ -415,3 +415,5 @@ core/database/arango/proxies/.gocache/
 core/database/arango/proxies/roproxy
 core/database/arango/proxies/rwproxy
 benchmarks/reports/*
+# Keep local PRDs out of version control
+docs/prd/
