--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ psycopg = {version = "^3.1.18", extras = ["binary"]}
 sqlalchemy = "^2.0.31"
 alembic = "^1.13.2"
 h2 = "^4.3.0"
+redis = "^5.0.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.5.0"
